mise à jour ok de userPanel et customPanelSet
A faire: dataOutput